try to fix overflow problem on windows

--- a/www/css/new-recipe-page.scss
+++ b/www/css/new-recipe-page.scss
@@ -305,6 +305,7 @@
   .result{
     height: 40vw;
     overflow:auto;
+    -ms-overflow-style: auto;
     border-bottom:1px solid lightgray;
     z-index:1002;
   }
